    patches the code to prevent that value from being computed at all (by
    removing the last expression). Unfortunately the function assumed that all
    operations have no data following in the bytecode. This patches changes it
    and enabled optimization/removal of operations with data.

05-May-2009 (Gnomi)
  - (lex.c, efuns.c) Improved numeric overflow detection. (Bug #630)

04-May-2009 (Zesstra)
  - (efuns.c, efuns.h, func_spec, string_spec, doc/, mudlib/)
    Added new efun: configure_driver() and documentation.
    configure_driver() will configure variuous aspects of the driver at run-time.
    The first settings available is now the soft and hard memory limits.
  - (smalloc.c, slaballoc.c, sysmalloc.c, xptmalloc.c)
    Added soft and hard memory limits in output of then 'malloc' command.
  - (object.c)
    Fix for float corruption in restore_svalue().
    We use 32 bit mantissas and 16 bit exponents for our floats. Ensure to
    write and read fixed-width types in save_svalue() and restore_svalue().
    Fixes #627, where restore_svalue() interpreted the 16bit integer for the
    exponent as 32bit integer, resulting in data corruption if the exponent
    was negative.
  - (svalue.h)
    The defines READ_DOUBLE, SPLIT_DOUBLe and STORE_DOUBLE were exchanged
    by static inline functions.
    STORE_DOUBLE_USED is not needed anymore and defined empty.
    Additionally, SPLIT_DOUBLE returns now the mantissa as p_int instead of long.
  - (interpret.c)
    The compiler stores float literals with PUT_INT32 and PUT_SHORT. Reading
    them from the bytecode was done by memcpy(). Some conditional compilation
    was required to read the correct datatypes. This patch implements an old
    TODO and makes F_FLOAT use the LOAD_INT32 and LOAD_SHORT macros from
    bytecode.h.

19-Apr-2009 (Gnomi)
  - (pkg-tls.c) Set this_interactive() when executing the callback
    after handshaking and print the prompt afterwards, so it looks the
    same as a normal logon() call.